<resources>
    <string name="app_name">X9</string>
    <string name="report_title">Report title</string>
    <string name="report_location">Report location</string>
    <string name="report_date">Report date</string>
    <string name="report_type">Report type</string>
    <string name="report_severity">Report severity</string>

    <string name="speed_camera">Speed camera</string>
    <string name="heavy_traffic">Heavy traffic</string>
    <string name="road_incidents">Road incidents</string>
    <string name="broken_vehicles">Broken vehicles</string>
    <string name="other">Other</string>

    <string name="report_description">Report description</string>
    <string name="minor">Minor</string>
    <string name="moderate">Moderate</string>
    <string name="major">Major</string>
    <string name="submit">Submit</string>

    <string name="field_is_required">This field is required.</string>
    <string name="delete_report">Delete report</string>

    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="account">Account</string>

    <string name="log_out">Log out</string>
    <string name="delete_report_confirmation">Are you sure you want to delete this report?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_occurred">An error has occurred</string>
    <string name="dismiss">Dismiss</string>
    <string name="restricted_feature_title">Restricted feature\n</string>
    <string name="restricted_feature_message">This feature is restricted to our users! Please log in or sign up in order to access this.</string>
    <string name="log_in">Log in</string>
    <string name="log_in_message">Logging in will grant you full access to all functionality. Become a member of the community!</string>
    <string name="my_reports">My reports</string>
    <string name="location_permission_required_title">Location permission required</string>
    <string name="location_permission_required_message">Location permission is required to create a new report, given that your location will be associated to it. This allows other users to know where the incident took place.</string>
    <string name="settings">Settings</string>
    <string name="report_location_disclaimer">Your current location will be added to this report in order to inform other users of where this incident was reported.</string>
    <string name="location_error_message">There was an issue obtaining your device\'s location. Your GPS signal may be too weak. Please try again later.</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="location_notification_channel_name">Route tracing location service</string>
    <string name="location_notification_channel_description">Notification to keep the location tracing service active in foreground</string>
    <string name="location_notification_title">Tracing route</string>
    <string name="location_notification_text">Location tracing is active</string>
    <string name="preferences_show_location_trace">Show location trace on map</string>
    <string name="preferences">Preferences</string>
    <string name="stop">Stop</string>
    <string name="location_permission_required_for_tracing_message">Location permission is required
    to trace your location. Your location history is only recorded locally and does not leave your
        device.</string>
    <string name="location_tracing_notification_permission_required_message">Notification permission is required to keep location tracing running in the background. It can be stopped at any time by pressing the Stop button on the notification.</string>
    <string name="notification_permission_required_title">Notification permission required</string>
    <string name="attach_image">Attach image</string>
    <string name="capture_image">Capture image</string>
    <string name="camera_permission_required_title">Camera permission required</string>
    <string name="camera_permission_required_message">Camera permission is required to capture
        an image and attach it to your report.</string>
    <string name="report_attached_image_content_description">Report image attached by the report author</string>
    <string name="new_reports_notification_channel_name">New reports</string>
    <string name="new_reports_notification_channel_description">Notifies you every time a new report is published on the platform</string>
    <string name="preferences_new_report_notifications">Receive notifications for new reports</string>
    <string name="new_reports_notification_permission_required_message">Notification permission is required to receive alerts for new reports.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="successfully_logged">You\'re successfully logged in the app!</string>

</resources>