...
    Scaffold(
        modifier = modifier.fillMaxSize(),
        contentWindowInsets = WindowInsets(0.dp),
        floatingActionButton = {
            if (isEditable) {
                FloatingActionButton(onClick = { onEditButtonClick() }) {
                    Icon(imageVector = Icons.Default.Edit, contentDescription = "Edit report")
                }
            }
        }
    ) { innerPadding ->
        Surface(
            modifier = Modifier
...
