...
import dk.itu.moapd.x9.s25137.domain.models.Report
import dk.itu.moapd.x9.s25137.ui.reports.list.ReportList
import dk.itu.moapd.x9.s25137.ui.reports.map.ReportMap
import dk.itu.moapd.x9.s25137.ui.theme.AppTheme

private enum class DashboardElement(val testTag: String) {
    CREATE_REPORT_BUTTON("dashboard:createReport")
}

enum class DashboardTabDestination(
    val labelRes: Int, val icon: ImageVector
) {
    LIST(R.string.list, Icons.AutoMirrored.Filled.List),
...
